# fmqa

./: .gitignore  LICENSE  README.md  pyproject.toml
chemistry/: experiments.ipynb  optimal_coordinates_110_300.npy  optimal_coordinates_110_400.npy  optimal_coordinates_110_450.npy  optimal_coordinates_110_500.npy  optimal_coordinates_12.npy  ortools_sampler.ipynb  pasqal.ipynb  pasqal_qaoa.ipynb  proteins_fmqa.ipynb  qubo_proteins.npy  regressors.pkl  regressors_ensemble.pkl  xgboost.ipynb
chemistry/biopython/: biopython.ipynb
chemistry/datasets/: m1_dataset.csv
chemistry/pasqal/: pasqal.ipynb  pasqal_qaoa.ipynb  qubo_peptide.npy
chemistry/results/: docking_results_19_12_2022.csv  results_03_01.csv  results_15_12_2022.csv
examples/: 01_portfolio_fmqa.ipynb  02_proteins_fmqa.ipynb
finance/: gurobi_portfolio.ipynb  ortools_qubo.ipynb  portfolio_fmqa.ipynb
finance/datasets/: sp_500.xlsx
finance/materials/: aws_tasks.ipynb  dwave_max_cut.ipynb  materials_design.md  qasm_file.qasm  qasm_file_1.qasm  quanvolution.md  results-downloaded.txt
finance/option_pricing/: .gitignore  asian_options.ipynb  aws_sagemaker_benchmark.csv  jax_benchmark.ipynb  jax_benchmark_a100.ipynb  jax_mc.ipynb  jax_monte_carlo.ipynb  plots.ipynb  samplers_gpu.ipynb  snippets.ipynb
finance/other/: factorization_machines.ipynb  jax_monte_carlo.ipynb  mc_functions.ipynb  movies_pytorch_fm.ipynb  options_pytorch_fm.ipynb  other.ipynb  probabilities_monte_carlo.ipynb  tsudalab_fmqa.ipynb  tutorial_sampling.ipynb  vectorized_monte_carlo.py
finance/quantum_annealing_results/: 2000q_48_qubits.npy  2000q_60_qubits.npy  2000q_60_qubits_trained.npy  2000q_64_qubits.npy
finance/stable/: portfolio_fmqa_v1.ipynb  portfolio_fmqa_v2.ipynb
modules/: fm.ipynb  ortools.ipynb  portfolio.ipynb  proteins.ipynb  qubo.ipynb  trainer.ipynb
(+81 files in other folders)
