[build-system]

    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]

    name = "fmqa"
    description = "Factorization Machine Quantum Annealing (FMQA) algorithm for combinatorial optimization tasks."
    readme = "README.md"
    authors = [{ name = "Mykhailo Ohorodnikov", email = "mykhailo.ohorodnikov@gmail.com" }]
    license = { file = "LICENSE" }
    version = "0.1.0"
    requires-python = ">= 3.10"
    dependencies = [
        "numpy >= 2.2.3",
        "pandas >= 2.2.3",
        "scikit-learn >= 1.6.1",
        "matplotlib >= 3.10.0",
        "tqdm >= 4.67.1",
        "torch >= 2.6.0",
        "dimod >= 0.12.18",
        "dwave-neal >= 0.6.0",
        "dwave-tabu >= 0.5.0",
        "dwave-ocean-sdk >= 8.1.0",
        "nbformat >= 5.10.4",
        "openpyxl >= 3.1.5",
    ]
    keywords = [
        "fmqa",
		"quantum",
        "quantum algorithm",
        "quantum annealing",
        "factorization machine",
		"combinatorial optimization",
    ]
    classifiers = [
        "Environment :: Console",
		"Framework :: Jupyter :: JupyterLab",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
		"License :: OSI Approved :: MIT License",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
    ]

[project.urls]
    Homepage = "https://github.com/ogorodnikov/fmqa"

[tool.setuptools.packages.find]

    include = ["modules"]

[tool.pytest.ini_options]

    filterwarnings = [
        "ignore::DeprecationWarning",
        "ignore::PendingDeprecationWarning"]
